{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 14,
  "lineage": "d4afe796-8ea1-7f40-6e29-9c9558d8d06e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:internet-gateway/igw-0c4c3504632377863",
            "id": "igw-0c4c3504632377863",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-0cfbd265161145828",
            "id": "rtb-0cfbd265161145828",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4c3504632377863",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypubroute"
            },
            "tags_all": {
              "Name": "mypubroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-0cfbd265161145828",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-02ea702055287c7c8",
            "id": "rtb-02ea702055287c7c8",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "mypvtroute"
            },
            "tags_all": {
              "Name": "mypvtroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-02ea702055287c7c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e643fcd3ba01548a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cfbd265161145828",
            "subnet_id": "subnet-05add5edf7a08ba1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09413222bd5e3c99f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cfbd265161145828",
            "subnet_id": "subnet-07ec9f0ce929fd7bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0928d4598d12d24c8",
            "region": "ap-south-1",
            "route_table_id": "rtb-02ea702055287c7c8",
            "subnet_id": "subnet-00af14d1a27b3e999"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042812fb348ba290f",
            "region": "ap-south-1",
            "route_table_id": "rtb-02ea702055287c7c8",
            "subnet_id": "subnet-0ae41abf7de8dc016"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-05add5edf7a08ba1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05add5edf7a08ba1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "qapubsub1"
            },
            "tags_all": {
              "Name": "qapubsub1"
            },
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-05add5edf7a08ba1c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-07ec9f0ce929fd7bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ec9f0ce929fd7bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "qapubsub2"
            },
            "tags_all": {
              "Name": "qapubsub2"
            },
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-07ec9f0ce929fd7bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-00af14d1a27b3e999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af14d1a27b3e999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "qapvtsub1"
            },
            "tags_all": {
              "Name": "qapvtsub1"
            },
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-00af14d1a27b3e999",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-0ae41abf7de8dc016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae41abf7de8dc016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "qapvtsub2"
            },
            "tags_all": {
              "Name": "qapvtsub2"
            },
            "vpc_id": "vpc-0be8d9005ed123a8f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-0ae41abf7de8dc016",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:vpc/vpc-0be8d9005ed123a8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fff1c803d5603894",
            "default_route_table_id": "rtb-0d5224030bfebf1df",
            "default_security_group_id": "sg-05022df95183ff45b",
            "dhcp_options_id": "dopt-02863d9383cfda150",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be8d9005ed123a8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5224030bfebf1df",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "tags": {
              "Name": "qamyvpc"
            },
            "tags_all": {
              "Name": "qamyvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "vpc-0be8d9005ed123a8f",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}